fixes package.json(?)

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "description": "Личный проект «Мишка» от HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
+    "add": "2.0.6",
     "autoprefixer": "9.5.x",
-    "browser-sync": "2.26.x",
+    "browser-sync": "2.26.7",
     "gulp": "4.0.x",
     "gulp-plumber": "1.2.x",
-    "gulp-sourcemaps": "2.6.x",
     "gulp-postcss": "8.0.x",
-    "gulp-sass": "4.0.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.x",
+    "node-modules": "1.0.1",
+    "node-sass": "4.13.0",
     "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -38,8 +41,5 @@
   "engines": {
     "node": "8.16"
   },
-  "dependencies": {
-    "add": "^2.0.6",
-    "node-sass": "^4.13.0"
-  }
+  "dependencies": {}
 }
