--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "add": "2.0.6",
-    "autoprefixer": "9.5.x",
+    "autoprefixer": "9.5.1",
     "browser-sync": "2.26.7",
     "del": "5.1.0",
-    "gulp": "4.0.x",
+    "gulp": "4.0.2",
     "gulp-csso": "4.0.1",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "6.2.0",
@@ -26,7 +26,7 @@
     "node-sass": "4.13.0",
     "posthtml-include": "1.3.2",
     "stylelint": "10.1.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "stylelint-config-htmlacademy": "0.1.4"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
